# rest-client-c

./: .gitignore  Doxyfile  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  configure  configure.ac
html/: annotated.html  annotated.js  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  globals_type.html  group__Object__API.html  group__Object__API.js  group__Object__API_ga0d17c18f03bfa2a3424924844261b9c3.html  group__Object__API_ga800f6abaff124d512ef54400a7fd57fb.html  group__Object__API_gaabc30668698302f991e18f1eb0b78b49.html  group__Object__API_gab09f87faf0ddba3177bd8f0ec7883c8f.html  group__Object__API_gab5fcda6f3216735c1815d5ca2deb7bc4.html  group__Object__API_gac3f1cbd66ca958cad9e24b0a43388d7e.html  group__Object__API_gad9b59518ad4bfdf9f364bbc8d566b37e.html  group__REST__API.html  group__REST__API.js  group__REST__API_ga0154e04e8109a08aa4a8773199b84648.html  group__REST__API_ga05e7ba50b59a37c411ed334a42f5bb97.html  group__REST__API_ga07ffe62eff3ae6cc18ba3710d7e7de79.html  group__REST__API_ga0de010a1957279cf0c7b9f4e1d734ed3.html  group__REST__API_ga0e73480ef2ae6e69043f511604a83f19.html  group__REST__API_ga1137f631a9d1f809a6a124d0de95f0c6.html  group__REST__API_ga130c895035dbbf0b5c2078850ddc6b79.html  group__REST__API_ga1414831e16828fef5989884c8b56ab8c.html  group__REST__API_ga14dc79399d9b029c58d3293829933354.html  group__REST__API_ga1643c4796e06226308ad1d8c19e4f116.html  group__REST__API_ga16e3689da61e8d4be49b0f7bff6fefd1.html  group__REST__API_ga1ab47fa3b2878d6f8e81609d884495ca.html  group__REST__API_ga1e15c916347c244f2d96a88c08620d96.html  group__REST__API_ga269691637a4475619f300ad3aa14a560.html  group__REST__API_ga29c2764d71d33ab560b68d6568862140.html  group__REST__API_ga322429d39996b9fff6c80dd2d3acf22b.html  (+80 more)
include/: maindoc.h  object.h  rest_client.h
lib/: Makefile.am  Makefile.in  object.h  rest-client-c.pc.in  rest_client.c  rest_client.h
src/: object.c  rest_client.c
test/: seatest.c  seatest.h  test.c  test_object.c  test_object.h  test_rest_client.c  test_rest_client.h
tests/: Makefile.am  Makefile.in  seatest.c  seatest.h  test.c  test.h  (+1 more)
(+27 files in other folders)
